--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -16,7 +16,7 @@
     <span><i class="fa fa-phone"></i><a href="https://wa.me/905451973471" target="_blank"> {{ ayarlar.telefon }}</a>&nbsp;&nbsp;</span>
     <a class="nav-link pl-0" href="https://goo.gl/maps/U6h5JE1MKjGA6XeK8" target="_blank">
       <i class="fa fa-map-marker-alt"></i> {{ ayarlar.adres }}</a>
-      <span><i class="fa-solid fa-clock"></i> {{ ayarlar.saat }}</span>
+      <span class="-ml-1"><i class="fa-solid fa-clock"></i> {{ ayarlar.saat }}</span>
 {% endfor %}
 
   </div> <!-- navbar-collapse .// -->
