--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -15,7 +15,11 @@
 		<li><a class="text-normal" href="{{ categories.get_url }}">&nbsp;{{ categories.category_name }} »&nbsp;</a></li>
 		<li class="text-semibold">{{ single_product.product_name }}</li>
 	</ul>
-	<span class="text-normal">Satışa Sunulduğu Tarih: {{ single_product.created_date }}</span>
+Satışa Sunulduğu Tarih:
+	<span class="bg-blue-50 text-blue-800 text-sm font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-blue-400">
+<svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 -ml-1"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
+&nbsp;{{ single_product.created_date }}</span>
+
 
 <!-- ============================ COMPONENT 1 ================================= -->
 
@@ -78,7 +82,11 @@
 <hr class="mb-2">
 
 	<h5 class="text-xl text-gray-500"><b>Bu ürün satıştan kaldırılmıştır</b></h5>
-	<span class="text-base">Satıştan Kaldırıldığı Tarih: {{ single_product.modified_date }}</span>
+Satıştan Kaldırıldığı Tarih:
+<span class="bg-gray-100 text-gray-800 text-sm font-medium inline-flex items-center px-2.5 py-0.5 rounded mr-2 dark:bg-gray-700 dark:text-gray-400 border border-gray-500">
+<svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 -ml-1"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
+&nbsp;{{ single_product.modified_date }}</span>
+
 
 
 	{% else %}
