--- a/templates/orders/order_completed.html
+++ b/templates/orders/order_completed.html
@@ -5,6 +5,43 @@
 <section class="section-content padding-y bg">
 <div class="container">
 
+	<ol class="flex items-center ml-4">
+		<li class="relative w-full mb-6">
+        <div class="flex items-center">
+            <div class="z-10 flex items-center justify-center w-6 h-6 bg-blue-200 rounded-full ring-0 ring-white dark:bg-blue-900 sm:ring-8 dark:ring-gray-900 shrink-0">
+                <svg aria-hidden="true" class="w-4 h-4 text-blue-600 dark:text-blue-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
+            </div>
+            <div class="flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
+        </div>
+        <div class="mt-3">
+            <h3 class="font-medium text-gray-900 dark:text-white">Sepet İşlemleri</h3>
+        </div>
+    </li>
+			<li class="relative w-full mb-6">
+					<div class="flex items-center">
+						<div class="z-10 flex items-center justify-center w-6 h-6 bg-blue-200 rounded-full ring-0 ring-white dark:bg-blue-900 sm:ring-8 dark:ring-gray-900 shrink-0">
+                <svg aria-hidden="true" class="w-4 h-4 text-blue-600 dark:text-blue-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
+							</div>
+							<div class="flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
+					</div>
+					<div class="mt-3">
+							<h3 class="font-medium text-gray-900 dark:text-white">Fatura Adresi</h3>
+					</div>
+			</li>
+
+			<li class="relative w-full mb-6">
+					<div class="flex items-center">
+						<div class="z-10 flex items-center justify-center w-6 h-6 bg-blue-200 rounded-full ring-0 ring-white dark:bg-blue-900 sm:ring-8 dark:ring-gray-900 shrink-0">
+								<svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+							</div>
+					</div>
+					<div class="mt-3">
+							<h3 class="font-medium text-gray-900 dark:text-white">Sipariş İşlemleri</h3>
+					</div>
+			</li>
+	</ol>
+
+<br>
 <!-- ============================ COMPONENT 1 ================================= -->
 <div class="row">
 	<aside class="col-lg-9">
@@ -16,7 +53,7 @@
 					<path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><path d="M22 4 12 14.01l-3-3"></path>
 					<use href="{% static 'images/check-circle.svg' %}" alt="check-circle" />
 				  </svg>
-					Siparişiniz Bize Gönderildi!</h3>
+					Siparişiniz Bize Gönderildi, Onaylanmayı Bekliyor!</h3>
 				<h3 class="text-xl">Emailinize Gelen Bilgi Mesajınızı Kontrol Ediniz..</h3>
         <h3 class="text-xl">Sipariş Kodunuz: {{ order.order_number }}</h3>
 
