--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -7,7 +7,9 @@
 
 
 <section class="section-content padding-y bg">
+
 <div class="container">
+
 
 <!-- ============================ COMPONENT 1 ================================= -->
 {% if not cart_items %}
@@ -19,6 +21,42 @@
 
 {% else %}
 
+<ol class="flex items-center ml-4">
+		<li class="relative w-full mb-6">
+				<div class="flex items-center">
+						<div class="z-10 flex items-center justify-center w-6 h-6 bg-blue-200 rounded-full ring-0 ring-white dark:bg-blue-900 sm:ring-8 dark:ring-gray-900 shrink-0">
+								<span class="flex w-3 h-3 bg-blue-600 rounded-full"></span>
+						</div>
+						<div class="flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
+				</div>
+				<div class="mt-3">
+						<h3 class="font-medium text-gray-900 dark:text-white">Sepet İşlemleri</h3>
+				</div>
+		</li>
+		<li class="relative w-full mb-6">
+				<div class="flex items-center">
+					<div class="z-10 flex items-center justify-center w-6 h-6 bg-gray-200 rounded-full ring-0 ring-white dark:bg-gray-700 sm:ring-8 dark:ring-gray-900 shrink-0">
+							<span class="flex w-3 h-3 bg-gray-900 rounded-full dark:bg-gray-300"></span>
+						</div>
+						<div class="flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
+				</div>
+				<div class="mt-3">
+						<h3 class="font-medium text-gray-900 dark:text-white">Fatura Adresi</h3>
+				</div>
+		</li>
+
+		<li class="relative w-full mb-6">
+				<div class="flex items-center">
+						<div class="z-10 flex items-center justify-center w-6 h-6 bg-gray-200 rounded-full ring-0 ring-white dark:bg-gray-700 sm:ring-8 dark:ring-gray-900 shrink-0">
+								<span class="flex w-3 h-3 bg-gray-900 rounded-full dark:bg-gray-300"></span>
+						</div>
+				</div>
+				<div class="mt-3">
+						<h3 class="font-medium text-gray-900 dark:text-white">Sipariş İşlemleri</h3>
+				</div>
+		</li>
+</ol>
+<br>
 
 
 <h1 class="text-2xl font-semibold -mt-3">Alışveriş Sepetim:</h1><br>
