--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -8,6 +8,43 @@
 <section class="section-content padding-y bg">
 <div class="container">
 
+	<ol class="flex items-center ml-4">
+		<li class="relative w-full mb-6">
+        <div class="flex items-center">
+            <div class="z-10 flex items-center justify-center w-6 h-6 bg-blue-200 rounded-full ring-0 ring-white dark:bg-blue-900 sm:ring-8 dark:ring-gray-900 shrink-0">
+                <svg aria-hidden="true" class="w-4 h-4 text-blue-600 dark:text-blue-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
+            </div>
+            <div class="flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
+        </div>
+        <div class="mt-3">
+            <h3 class="font-medium text-gray-900 dark:text-white">Sepet İşlemleri</h3>
+        </div>
+    </li>
+			<li class="relative w-full mb-6">
+					<div class="flex items-center">
+						<div class="z-10 flex items-center justify-center w-6 h-6 bg-blue-200 rounded-full ring-0 ring-white dark:bg-blue-900 sm:ring-8 dark:ring-gray-900 shrink-0">
+								<span class="flex w-3 h-3 bg-blue-600 rounded-full"></span>
+							</div>
+							<div class="flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
+					</div>
+					<div class="mt-3">
+							<h3 class="font-medium text-gray-900 dark:text-white">Fatura Adresi</h3>
+					</div>
+			</li>
+
+			<li class="relative w-full mb-6">
+					<div class="flex items-center">
+							<div class="z-10 flex items-center justify-center w-6 h-6 bg-gray-200 rounded-full ring-0 ring-white dark:bg-gray-700 sm:ring-8 dark:ring-gray-900 shrink-0">
+									<span class="flex w-3 h-3 bg-gray-900 rounded-full dark:bg-gray-300"></span>
+							</div>
+					</div>
+					<div class="mt-3">
+							<h3 class="font-medium text-gray-900 dark:text-white">Sipariş İşlemleri</h3>
+					</div>
+			</li>
+	</ol>
+
+<br>
 <!-- ============================ COMPONENT 1 ================================= -->
 <div class="row">
 	<aside class="col-lg-5">
