--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -84,7 +84,7 @@
         <div class="d-flex justify-content-end mb-3 mb-lg-0">
           {% if user.id is None %}
           <div class="widget-header">
-            <small class="">&nbsp;</small>
+            <small class="text-sm">Hoşgeldin Ziyaretçi</small>
             <div>
               <a href="{% url 'login' %}">Giriş Yap</a> <span class="dark-transp"> | </span>
               <a href="{% url 'register' %}">Kaydol</a>
