--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -84,6 +84,7 @@ Filtreye Göre Ara:
  <option value="30">Sony Powerboard</option>
  <option value="12">Sunny-Axen Anakart</option>
  <option value="18">T-con Boardlar</option>
+ <option value="37">Tv Led Bar</option>
  <option value="36">Tweeter Tiz</option>
  <option value="22">Uydu Alıcısı</option>
  <option value="32">Uydu Alıcı Modüller</option>
