--- a/templates/list.html
+++ b/templates/list.html
@@ -6,7 +6,7 @@
 	<div class="col-md-4">
 		<figure class="card card-product-grid rounded">
 			<div class="img-wrap">
-				<a href="{{ product.get_absolute_url }}"> <img class="rounded hover:scale-105 transition duration-1000 ease-in-out" src="{{ product.images.url }}" alt="{{ product.product_name }}" width="1000" height="1000"></a>
+				<a href="{{ product.get_absolute_url }}"> <img class="rounded hover:-translate-y-1 duration-1000" src="{{ product.images.url }}" alt="{{ product.product_name }}" width="1000" height="1000"></a>
 			</div> <!-- img-wrap.// -->
 			<figcaption class="info-wrap">
 				<div class="fix-height">
