--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -98,7 +98,7 @@ Satıştan Kaldırıldığı Tarih:
 	<article class="gallery-wrap">
 		<div class="img-big-wrap mainImage">
 	<center>
-		<img src="{{ single_product.images.url }}" alt="ürün resmi" style="height:360px;"></img>
+		<img src="{{ single_product.images.url }}" class="rounded" alt="ürün resmi" style="height:360px;"></img>
 
 		<a href="{{ single_product.images.url }}" target="_blank">
 			<i class="fa-solid fa-magnifying-glass"></i> görseli büyütmek için tıkla</a>
