--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -173,7 +173,7 @@ Filtreye Göre Ara:
 		<figure class="card card-product-grid">
 			<div class="img-wrap">
 				<a href="{{ product.get_absolute_url }}" target="_blank"> <img src="{{ product.images.url }}"
-					class="rounded hover:scale-105 transition duration-1000 ease-in-out"
+					class="rounded hover:-translate-y-1 duration-1000"
 					alt="{{ product.product_name }}" width="1000" height="1000"></a>
 			</div> <!-- img-wrap.// -->
 			<figcaption class="info-wrap">
