--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -72,7 +72,7 @@
 </script>
 
 
-<!-- paylaş -->
+<!-- link paylaş -->
 <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=6384c931233b3c001362c788&product=inline-share-buttons' async='async'>
 </script>
 
