--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block description %}Engin Elektronik tv satış-tamiri, tv kart satış-tamiri, kumanda satış-tamiri, tv ayak satış, 2.el tv satış, tv kablo satış, uydu alıcısı satış, android box satış, hoparlör tamirinin yapıldığı yer{% endblock %}
-{% block keywords %}engin elektronik,engin e,engin el,engin ele,engin elek,engin elekt,engin elektr,engin elektro,engin elektron,engin elektroni,enginelektronik,engin elektronik tv,engin elektronik tv hastanesi{% endblock %}
+{% block keywords %}engin elektronik{% endblock %}
 {% block title %}Engin Elektronik Tv.Hastanesi {% endblock %}
 
 
