--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -53,8 +53,7 @@ Filtreye Göre Ara:
 <option value="SUNNY">sunny</option>
 <option value="SUNNY-AXEN">sunny-axen</option>
 <option value="SONY">sony</option>
-<option value="TOSHIBA">toshiba</option>
-<option value="VESTEL">vestel</option>
+<option value="Vestel-Toshiba">vestel-toshiba</option>
 <option value="YUMATU">yumatu</option>
 			</select>
 
@@ -88,8 +87,8 @@ Filtreye Göre Ara:
  <option value="36">Tweeter Tiz</option>
  <option value="22">Uydu Alıcısı</option>
  <option value="32">Uydu Alıcı Modüller</option>
- <option value="21">Vestel Anakart</option>
- <option value="26">Vestel Powerboard</option>
+ <option value="21">Vestel-Toshiba Anakart</option>
+ <option value="26">Vestel-Toshiba Powerboard</option>
  <option value="28">Ysus Board</option>
  <option value="31">Yumatu Anakart</option>
  <option value="27">Zsus Board</option>
