--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 <meta name="description" content="{% block description %}Engin Elektronik tv satış-tamiri, tv kart satış-tamiri, kumanda satış-tamiri, tv ayak satış, 2.el tv satış, tv kablo satış, uydu alıcısı satış, android box satış, hoparlör tamirinin yapıldığı yer{% endblock %}" />
 <meta name="keywords" content="{% block keywords %}engin elektronik{% endblock %}" />
 <meta name="robots" content="all" />
+<meta name="googlebot" content="all" />
 <meta name="google-site-verification" content="6L2RD__lUdlr8X2lTzgKzJfS6nDDCbCe6DoskQGwL1c" />
 <meta name="referrer" content="unsafe-url" /> <!-- csrf mobil için -->
 <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon" />
