--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -164,14 +164,18 @@ Satıştan Kaldırıldığı Tarih:
 
 	<div>
 	<span class="price h4">{{ single_product.price }} ₺</span>
-		<button type="submit" class="btn bg-blue-600 hover:bg-blue-700 text-white focus:ring-3 focus:ring-blue-300 -mt-3 ml-3"> <span class="text">&nbsp;Sepete Ekle</span> <i class="fa-solid fa-cart-shopping"></i></button>
+		<button type="submit" class="btn bg-blue-600 hover:bg-blue-700 text-white focus:ring-3 focus:ring-blue-300 -mt-3 ml-3 "> <span class="text">
+			&nbsp;Sepete Ekle&nbsp;</span>
+			<svg viewBox="0 0 24 24" width="22" height="18" stroke="currentColor" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-white"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+			</button>
 	</div>
 <br>
 
 
 		<a href="https://wa.me/905451973471" target="_blank">
 			<button type="button" class="btn bg-emerald-600 hover:bg-emerald-700 text-white focus:ring-3 mt-3">
-				<i class="fa fa-phone"></i> Whatsapp Sipariş (0545-197-3471)</button></a>
+				<svg viewBox="0 0 24 24" width="16" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-white"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
+				 Whatsapp Sipariş (0545-197-3471)</button></a>
 
 
 <br><br><br>
