--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -34,6 +34,7 @@ Filtreye Göre Ara:
 <option value="Dijitsu">dijitsu</option>
 <option value="Dreamstar">dreamstar</option>
 <option value="GEEPAS">geepas</option>
+<option value="Hisense">hisense</option>
 <option value="Homstar">homstar</option>
 <option value="LG">lg</option>
 <option value="Lifemaxx">lifemaxx</option>
