--- a/templates/list.html
+++ b/templates/list.html
@@ -11,12 +11,15 @@
 			<figcaption class="info-wrap">
 				<div class="fix-height">
 					<span class="badge badge-pill badge-light" style="font-size:11px; margin-left: -5px; margin-top:-3px">Stok: {{product.stock}} Adet</span>
-
-					<div style="margin-left: -5px; margin-top: 216px;" class="badge badge-pill badge-light hover:bg-gray-300">
-					<a href="{{ product.category.get_url }}" class="font-semibold hover:text-gray-700">{{ product.category }}</a>
+					{% if product.yeni %}
+<span class="badge  badge-danger badge-yeni" style="font-size:11px; margin-left: 243px; margin-top:-3px">
+	<i class="fa-solid fa-bolt stroke-2"></i> {{product.yeni}}</span>
+					{% endif %}
+					<div style="margin-left: -5px; margin-top: 215px;" class="badge badge-pill badge-light hover:bg-gray-300">
+					<a href="{{ product.category.get_url }}" target="_blank" class="font-semibold hover:text-gray-700 break-all">{{ product.category }}</a>
 					</div>
 
-					<a href="{{ product.get_absolute_url }}" class="title mt-4">{{ product.product_name }}</a>
+					<a href="{{ product.get_absolute_url }}" target="_blank" class="title mt-4">{{ product.product_name }}</a>
 
 					<div class="price-wrap mt-2">
 						{% if product.price <= 0 %}
