--- a/templates/list.html
+++ b/templates/list.html
@@ -5,16 +5,17 @@
 	{% for product in products %}
 	<div class="col-md-4">
 		<figure class="card card-product-grid rounded">
-			<div class="img-wrap">
-				<a href="{{ product.get_absolute_url }}"> <img class="rounded hover:-translate-y-1 duration-1000" src="{{ product.images.url }}" alt="{{ product.product_name }}" width="1000" height="1000"></a>
+			<div class="img-wrap absolute hover:-translate-y-2.5 duration-1000">
+				<a href="{{ product.get_absolute_url }}"> <img class="rounded" src="{{ product.images.url }}" alt="{{ product.product_name }}" width="1000" height="1000"></a>
+				<span class="badge badge-pill badge-light" style="font-size:11px; margin-left: -5px; margin-top:-3px">Stok: {{product.stock}} Adet</span>
+				{% if product.yeni %}
+<span class="badge  badge-danger badge-yeni" style="font-size:11px; margin-left: 243px; margin-top:-3px">
+<i class="fa-solid fa-bolt stroke-2"></i> {{product.yeni}}</span>
+				{% endif %}
 			</div> <!-- img-wrap.// -->
 			<figcaption class="info-wrap">
 				<div class="fix-height">
-					<span class="badge badge-pill badge-light" style="font-size:11px; margin-left: -5px; margin-top:-3px">Stok: {{product.stock}} Adet</span>
-					{% if product.yeni %}
-<span class="badge  badge-danger badge-yeni" style="font-size:11px; margin-left: 243px; margin-top:-3px">
-	<i class="fa-solid fa-bolt stroke-2"></i> {{product.yeni}}</span>
-					{% endif %}
+
 					<div style="margin-left: -5px; margin-top: 215px;" class="badge badge-pill badge-light hover:bg-gray-300">
 					<a href="{{ product.category.get_url }}" target="_blank" class="font-semibold hover:text-gray-700 break-all">{{ product.category }}</a>
 					</div>
