--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -171,30 +171,26 @@ Filtreye Göre Ara:
 	{% if products %}
 	{% for product in products %}
 	<div class="col-md-4">
-		<figure class="card card-product-grid">
-			<div class="img-wrap">
+		<figure class="card card-product-grid rounded">
+			<div class="img-wrap absolute hover:-translate-y-2.5 duration-1000">
 				<a href="{{ product.get_absolute_url }}" target="_blank"> <img src="{{ product.images.url }}"
-					class="rounded hover:-translate-y-1 duration-1000"
-					alt="{{ product.product_name }}" width="1000" height="1000"></a>
+				class="rounded" alt="{{ product.product_name }}" width="1000" height="1000"></a>
+				<span class="badge badge-pill badge-light" style="font-size:11px; margin-left: -5px; margin-top:-3px">Stok: {{product.stock}} Adet</span>
+				{% if product.yeni %}
+<span class="badge  badge-danger badge-yeni" style="font-size:11px; margin-left: 243px; margin-top:-3px">
+<i class="fa-solid fa-bolt stroke-2"></i> {{product.yeni}}</span>
+				{% endif %}
 			</div> <!-- img-wrap.// -->
 			<figcaption class="info-wrap">
 				<div class="fix-height">
-					<span class="badge badge-pill badge-light" style="font-size:11px; margin-left: -5px; margin-top:-3px">Stok: {{product.stock}} Adet</span>
-					{% if product.yeni %}
-<span class="badge  badge-danger badge-yeni" style="font-size:11px; margin-left: 243px; margin-top:-3px">
-	<i class="fa-solid fa-bolt stroke-2"></i> {{product.yeni}}</span>
-					{% endif %}
 					<div style="margin-left: -5px; margin-top: 215px;" class="badge badge-pill badge-light hover:bg-gray-300">
 					<a href="{{ product.category.get_url }}" target="_blank" class="font-semibold hover:text-gray-700 break-all">{{ product.category }}</a>
 					</div>
-
 					<a href="{{ product.get_absolute_url }}" target="_blank" class="title mt-4">{{ product.product_name }}</a>
-
 					<div class="price-wrap mt-2">
 						{% if product.price <= 0 %}
 							<h5 style="color: gray"><b>Stokta kalmadı, sipariş için iletişime geçin</b></h5>
 							{% else %}
-
 					</div> <!-- price-wrap.// -->
 				</div>
 							</figcaption>
