--- a/templates/list.html
+++ b/templates/list.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="row md:flex" style="margin-top: 3px; margin-left:-12px;">
+<div class="row sagsol" style="margin-top: 3px;">
 	{% if products %}
 	{% for product in products %}
 	<div class="col-md-4">
