--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -167,7 +167,7 @@ Filtreye Göre Ara:
 
 
 
-<div class="row">
+<div class="row sagsol" style="margin-top: 3px;">
 	{% if products %}
 	{% for product in products %}
 	<div class="col-md-4">
