--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -206,7 +206,7 @@ Satıştan Kaldırıldığı Tarih:
                 <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <div class="row">
+                            <div class="row sagsol" style="margin-top: 3px;">
 															{% for product in products %}
 																<div class="col-md-2">
 																<figure class="card card-product-grid">
