--- a/templates/list.html
+++ b/templates/list.html
@@ -45,6 +45,6 @@
             <button class="btn hover:bg-slate-50" style="margin-bottom: 50px; margin-top: 30px;  border-radius: 50px; box-shadow: 0 2px 8px 0 rgb(0 0 0 / 15%);"
                     hx-get="{% url 'home' %}?page={{products.next_page_number}}"
                     hx-target="#load-more"
-                    hx-swap="outerHTML">daha fazla yükle<img class="htmx-indicator inline" src="{% static 'images/load-more.svg' %}" alt="load-more"></button>
+                    hx-swap="outerHTML">daha fazla yükle </button>
         </div>
 {% endif %}
