--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -191,7 +191,7 @@ Filtreye Göre Ara:
 		<figure class="card card-product-grid rounded">
 			<div class="img-wrap absolute hover:-translate-y-2.5 duration-1000">
 				<a href="{{ product.get_absolute_url }}" target="_blank"> <img src="{{ product.images.url }}"
-				class="rounded" alt="{{ product.product_name }}" width="1000" height="1000"></a>
+				class="rounded" alt="{{ product.product_name }}" /></a>
 				<span class="badge badge-pill badge-light" style="font-size:11px; margin-left: -5px; margin-top:-3px">Stok: {{product.stock}} Adet</span>
 				{% if product.yeni %}
 <span class="badge  badge-danger badge-yeni" style="font-size:11px; margin-left: 243px; margin-top:-3px">
