--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -195,7 +195,7 @@ Filtreye Göre Ara:
 				<span class="badge badge-pill badge-light" style="font-size:11px; margin-left: -5px; margin-top:-3px">Stok: {{product.stock}} Adet</span>
 				{% if product.yeni %}
 <span class="badge  badge-danger badge-yeni" style="font-size:11px; margin-left: 243px; margin-top:-3px">
-<i class="fa-solid fa-bolt stroke-2"></i> {{product.yeni}}</span>
+&nbsp;{{product.yeni}}&nbsp;</span>
 				{% endif %}
 			</div> <!-- img-wrap.// -->
 			<figcaption class="info-wrap">
