--- a/templates/list.html
+++ b/templates/list.html
@@ -7,7 +7,7 @@
 		<figure class="card card-product-grid rounded">
 			<div class="img-wrap absolute hover:-translate-y-2.5 duration-1000">
 				<a href="{{ product.get_absolute_url }}">
-					<img class="rounded" src="{{ product.images.url }}" alt="{{ product.product_name }}" />
+					<img class="rounded" src="{{ product.webp.url }}" alt="{{ product.product_name }}" />
 				</a>
 				<span class="badge badge-pill badge-light" style="font-size:11px; margin-left: -5px; margin-top:-3px">Stok: {{product.stock}} Adet</span>
 				{% if product.yeni %}
