--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -211,7 +211,7 @@ Satıştan Kaldırıldığı Tarih:
 																<div class="col-md-2">
 																<figure class="card card-product-grid">
 																	<div class="img-wrap">
-																		<a href="{{ product.get_absolute_url }}"> <img class="rounded" src="{{ product.images.url }}" alt="{{ product.product_name }}" /></a>
+																		<a href="{{ product.get_absolute_url }}"> <img class="rounded" src="{{ product.webp.url }}" alt="{{ product.product_name }}" /></a>
 																	</div> <!-- img-wrap.// -->
 																	<figcaption class="info-wrap">
 																		<div class="fix-height">
