--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -76,7 +76,7 @@
 <tr>
 	<td>
 		<figure class="itemside align-items-center">
-			<img src="{{ cart_item.product.images.url }}" class="img-sm rounded -ml-2">
+			<img src="{{ cart_item.product.webp.url }}" class="img-sm rounded -ml-2">
 			<figcaption class="info">
 				<a href="{{ cart_item.product.get_absolute_url }}" class="title text-dark -ml-1">{{ cart_item.product.product_name }}</a>
 
