--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -105,7 +105,7 @@
 	      <tr>
 	      	<td>
 	      		<figure class="itemside align-items-center">
-	      			<div class="aside"><img src="{{ cart_item.product.images.url }}" class="img-sm rounded -ml-6"></div>
+	      			<div class="aside"><img src="{{ cart_item.product.webp.url }}" class="img-sm rounded -ml-6"></div>
 	      			<figcaption class="info">
 	      				<a href="{{ cart_item.product.get_absolute_url }}" class="title text-dark -ml-6">{{ cart_item.product.product_name }}</a>
 	      			</figcaption>
