--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -37,7 +37,7 @@
 <article class="gallery-wrap">
 	<div class="img-big-wrap mainImage">
 <center>
-	<img src="{{ single_product.images.url }}" alt="ürün resmi" style="height:360px;"
+	<img src="{{ single_product.webp.url }}" alt="ürün resmi" style="height:360px;"
 	class="filter grayscale hover:grayscale-0 transition-all duration-300"> </img>
 
 
