--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -5,9 +5,9 @@
 <header class="section-header">
 
 <nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom pl-1 flex">
-<div class="container">
 
-  <div class="navbar-collapse mx-auto">
+
+  <div class="navbar-collapse mx-auto justify-end">
 
     <ul class="navbar-nav mr-auto">
     </ul>
@@ -16,16 +16,16 @@
     <span><i class="fa fa-phone"></i><a href="https://wa.me/905451973471" target="_blank"> {{ ayarlar.telefon }}</a>&nbsp;&nbsp;</span>
     <a class="nav-link pl-0" href="https://goo.gl/maps/U6h5JE1MKjGA6XeK8" target="_blank">
       <i class="fa fa-map-marker-alt"></i> {{ ayarlar.adres }}</a>
-      <span class="ml-0"><i class="fa-solid fa-clock"></i> {{ ayarlar.saat }}</span>
+      <span class="mr-2 ml-1"><svg viewBox="0 0 24 24" width="22" height="22" stroke="white" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-zinc-700 -mt-1"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>{{ ayarlar.saat }}</span>
 {% endfor %}
 
   </div> <!-- navbar-collapse .// -->
-</div> <!-- container //  -->
+
 </nav>
 
 <section class="header-main border-bottom border-0">
 
-  <div class="container">
+  <div class="container flex-row">
 
 <div class="row align-items-center">
 
