--- a/templates/index.html
+++ b/templates/index.html
@@ -14,15 +14,15 @@
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg mt-3" style="background-color: white;">
 
-<div class="container">
+<div class="container flex">
 	<div class="row">
 
 		<aside class="col-md-3 md:flex" style="margin-left: -15px;">
 	<div class="flex card w-72" style="height:1850px;">
 		<article class="filter-group">
 			<header class="card-header">
-				<i class="icon-control fa fa-list"></i>
-					<h6 class="text-md font-bold text-blue-600">Kategoriler</h6>
+					<h6 class="text-md font-bold text-blue-600">Kategoriler
+						<svg viewBox="0 0 24 24" width="16" height="16" stroke="black" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 ml-32 inline"><line x1="8" y1="6" x2="21" y2="6"></line><line x1="8" y1="12" x2="21" y2="12"></line><line x1="8" y1="18" x2="21" y2="18"></line><line x1="3" y1="6" x2="3.01" y2="6"></line><line x1="3" y1="12" x2="3.01" y2="12"></line><line x1="3" y1="18" x2="3.01" y2="18"></line></svg></h6>
 			</header>
 
 			<div class="filter-content show" id="collapse_1">
