--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -25,7 +25,7 @@ Filtreye Göre Ara:
 	<!--	 {{ myFilter.form.brand }} -->
 	<select name="brand" id="id_brand" class="bg-zinc-100 rounded h-6">
 		<option value="" selected="">---------</option>
-
+<option value="ALBA">alba</option>
 <option value="Arçelik-Beko-Grundig-Altus">arcelik-beko-grundig-altus</option>
 <option value="AWOX">awox</option>
 <option value="AXEN">axen</option>
@@ -50,6 +50,7 @@ Filtreye Göre Ara:
 <option value="ROWELL">rowell</option>
 <option value="SAMSUNG">samsung</option>
 <option value="SANYO">sanyo</option>
+<option value="SEG">seg</option>
 <option value="Skytech">skytech</option>
 <option value="SUNNY">sunny</option>
 <option value="SUNNY-AXEN">sunny-axen</option>
