--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -13,9 +13,11 @@
     </ul>
 
 {% for ayarlar in ayarlar %}
-    <span><i class="fa fa-phone"></i><a href="https://wa.me/905451973471" target="_blank"> {{ ayarlar.telefon }}</a>&nbsp;&nbsp;</span>
+    <span><svg viewBox="0 0 24 24" width="16" height="20" stroke="blacka" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-black"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
+    </svg>
+      <a href="https://wa.me/905451973471" target="_blank"> {{ ayarlar.telefon }}</a>&nbsp;&nbsp;</span>
     <a class="nav-link pl-0" href="https://goo.gl/maps/U6h5JE1MKjGA6XeK8" target="_blank">
-      <i class="fa fa-map-marker-alt"></i> {{ ayarlar.adres }}</a>
+      <svg viewBox="0 0 24 24" width="22" height="18" stroke="black" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-black"><polygon points="3 11 22 2 13 21 11 13 3 11"></polygon></svg>{{ ayarlar.adres }}</a>
       <span class="mr-2 ml-1"><svg viewBox="0 0 24 24" width="22" height="22" stroke="white" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-zinc-700 -mt-1"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>{{ ayarlar.saat }}</span>
 {% endfor %}
 
@@ -98,7 +100,9 @@
           </div>
           {% endif %}
           <a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
-            <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
+            <div class="icon icon-sm rounded-circle border">
+              <svg viewBox="0 0 24 24" width="22" height="18" stroke="currentColor" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-white"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+            </div>
             <span class="badge badge-pill badge-danger notify">{{ cart_count }}</span>
           </a>
         </div> <!-- widgets-wrap.// -->
