--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -59,7 +59,7 @@
 	    <i class="fa-solid fa-circle-info" style="margin-top:7px; margin-left:-5px;"></i> Bilgi için tıklayın
 	  </button>
 		<div class="dropdown-menu w-96 border-slate-100 hover:bg-slate-50 break-all md:break-all" style="margin-left: 5px">
-					Bu ürün satıldı, yakın zamanda silinecektir.
+			Ürün satıldı, ürün alıcıya ulaştığında silinecektir.
 				</div>
 	</div>
 </div>
@@ -75,7 +75,7 @@
 <div class="mb-3">
  <b>Marka:&nbsp;</b>{{ single_product.brand }}<br>
  <b>Durum:&nbsp;</b>{{ single_product.durum }}<br>
- <b>Stokta Kalan:&nbsp;</b>{{ single_product.stock }} Adet
+ <b>Stok:&nbsp;</b>Yok
 </div>
 
 
@@ -148,7 +148,12 @@ Satıştan Kaldırıldığı Tarih:
 	<div class="mb-3">
 	 <b>Marka:&nbsp;</b>{{ single_product.brand }}<br>
 	 <b>Durum:&nbsp;</b>{{ single_product.durum }}<br>
-	 <b>Stokta Kalan:&nbsp;</b>{{ single_product.stock }} Adet
+	 <b>Stok:</b>
+{% if single_product.stock == 1 %}
+	 {{ single_product.stock }} Adet Kaldı
+	 {% else %}
+	 {{ single_product.stock }} Adet
+	 {% endif %}
 	</div>
 
 
@@ -163,7 +168,7 @@ Satıştan Kaldırıldığı Tarih:
 
 
 	<div>
-	<span class="price h4">{{ single_product.price }} ₺</span>
+	<span class="price h4 rounded">{{ single_product.price }} ₺</span>
 		<button type="submit" class="btn bg-blue-600 hover:bg-blue-700 text-white focus:ring-3 focus:ring-blue-300 -mt-3 ml-3 "> <span class="text">
 			&nbsp;Sepete Ekle&nbsp;</span>
 			<svg viewBox="0 0 24 24" width="22" height="18" stroke="currentColor" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-white"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
@@ -178,11 +183,10 @@ Satıştan Kaldırıldığı Tarih:
 				 Whatsapp Sipariş (0545-197-3471)</button></a>
 
 
-<br><br><br>
-<div class="rounded w-48 border-slate-100 hover:bg-green-50 -mt-3">
-<p class="mb-1 font-medium">Paylaş:</p>
+<br><br>
+
+<p class="mb-1 font-medium mt-2">Paylaş:</p>
 <div class="sharethis-inline-share-buttons">
-</div>
 </div>
 </article> <!-- product-info-aside .// -->
 </form>
@@ -200,8 +204,8 @@ Satıştan Kaldırıldığı Tarih:
 <section class="pt-3 pb-3">
     <div class="container mx-auto">
         <div class="row">
-            <h3 class="flex card-title mb-4 ml-3 text-xl font-bold break-all md:break-all">Benzer {{ categories.category_name }}</h3>
-						<a class="btn bg-zinc-100 hover:bg-zinc-200 ml-3 -mt-2 w-32 h-11 font-semibold" href="{{ categories.get_url }}">Hepsini Gör</a>
+            <h3 class="flex card-title mb-4 ml-1 text-md font-bold break-all md:break-all">{{ categories.category_name }} Ürünler</h3>
+						<a class="btn bg-zinc-100 hover:bg-zinc-200 ml-3 -mt-2 w-32 h-10 font-semibold" href="{{ categories.get_url }}">Hepsini Gör</a>
             <div class="col-12 mt-1">
                 <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
